--- a/examples/04_even_more_examples/cooperation_dots.html
+++ b/examples/04_even_more_examples/cooperation_dots.html
@@ -38,10 +38,7 @@ var sim;                            // This 'global' variable will hold the enti
                 ncol: 100,
                 nrow: 50,		                                            // dimensions of the grid to build
                 seed: 61,
-                fpsmeter: false,   
-                fps: 60,                                                   // Note: FPS can only be set in fastmode
-                fastmode: true,
-                throttlefps: false,                                        // Note: FPS throttling only useful at low targetfps OR when display() is the time-limiting step  
+                fpsmeter: true,                   
                 wrap: [false, false],                                        // Wrap boundary [COLS, ROWS]
                 scale: 10,				                                    // scale of the grid (nxn pixels per grid point)            
                 graph_interval: 5,
