--- a/examples/02_advanced/diffusion_limited_aggregation.html
+++ b/examples/02_advanced/diffusion_limited_aggregation.html
@@ -31,8 +31,7 @@
                 title: "Diffusion limited aggregation",                        // The name of your cacatoo-simulation
                 description: "",         // And a description if you wish
                 maxtime: 1000000,                             // How many time steps the model continues to run
-                fastmode: true,                               // If possible, fast-mode will update the model more than once before displaying the grid
-                                                              // (note, the onscreen FPS may drop below 60 fps when using fast mode, although many more timesteps may be handled per second)
+                skip: 5,                                      // Skip 5 frames before re-drawing the grid
                 ncol : 200,                                   // Number of columns (width of your grid)
                 nrow : 200,		                              // Number of rows (height of your grid)
                 wrap : [false, false],                         // Wrapped boundary conditions? [COLS, ROWS]   
