--- a/examples/02_advanced/petridish_dots.html
+++ b/examples/02_advanced/petridish_dots.html
@@ -45,7 +45,7 @@
         sim = new Simulation(config)
         
         sim.makeGridmodel("cells");
-        // sim.cells.statecolours.alive[0] = [255, 255, 255] // Change bg to white
+        
         sim.cells.statecolours.alive[1] = [79, 31, 154] // Change WT 1 to white
         sim.cells.statecolours.alive[2] = [228, 178, 36] // Change mutant 1 to gold
         sim.cells.statecolours.alive[3] = [32, 100, 100] // Change mutant 2 to dark-turquoise
@@ -110,6 +110,7 @@
         sim.addSlider("death_rate_growing", 0.0, 1.0, 0.01)
         sim.addSlider("cell_diffusion", 0, 10, 1)
         sim.addSlider("mutations_required", 0, 10, 1)
+        sim.addObjectbrush("cells", {"alive":1, "age":2}, 20, 1)
 
         sim.start()
     }
