Improved consistency of how gridmodel names are handles

--- a/examples/01_beginner/spirals.html
+++ b/examples/01_beginner/spirals.html
@@ -71,7 +71,7 @@
         
         sim.addButton("pause", function () { sim.toggle_play() })
         sim.addButton("mix grid", function () { sim.spirals.perfectMix() })
-        sim.addStatebrush("spirals", "colour", 3, 2000, 1)
+        sim.addStatebrush("spirals", "colour", 3, 800)
         sim.start()
     }
 
