Resolved glitch in object drawer

--- a/examples/02_advanced/petridish_dots.html
+++ b/examples/02_advanced/petridish_dots.html
@@ -110,7 +110,7 @@
         sim.addSlider("death_rate_growing", 0.0, 1.0, 0.01)
         sim.addSlider("cell_diffusion", 0, 10, 1)
         sim.addSlider("mutations_required", 0, 10, 1)
-        sim.addObjectbrush("cells", {"alive":1, "age":2}, 20, 1)
+        sim.addObjectbrush("cells", {"alive":1, "age":2}, 20)
 
         sim.start()
     }
