--- a/examples/01_beginner/ode_lotka.html
+++ b/examples/01_beginner/ode_lotka.html
@@ -109,8 +109,10 @@
                 this.grid[this.nc / 2][this.nr / 2].lotka.state[0],],
                 ["gold", "#FF00AA"],
                 "ODE states in central grid point")
+            if(this.time%100==0)sim.divToImage("canvases_and_graphs","LotkaVolterra")
         }
-
+        sim.addButton("pause/continue", function () { sim.toggle_play() })
+        sim.addButton("step", function () { sim.step(); sim.display() })
         sim.start()
 
 
@@ -125,8 +127,12 @@
 
 <body onload="cacatoo()">
     <div class="header" id="header"></div>
-    <div class="content" id="canvas_holder"> </div>
-    <div class="content" id="graph_holder"> </div>
+    <div id="canvases_and_graphs">
+        <div class="content" id="canvas_holder"> </div>
+        <div class="content" id="graph_holder"> </div>
+    </div>
+    <div class="content" id="form_holder"> </div>
+    
     <div class="footer" id="footer"></div>
 </body>
 
