--- a/examples/01_beginner/prime.html
+++ b/examples/01_beginner/prime.html
@@ -28,11 +28,11 @@
             title: "Modulo prime",
             description: "Update rule: next_state = n_neighbours % 2",
             maxtime: 100000000,
-            ncol: 300,
-            nrow: 300,		                          // dimensions of the grid to build
+            ncol: 100,
+            nrow: 100,		                          // dimensions of the grid to build
             sleep: 200,
             wrap: [true, true],                      // Wrap boundary [COLS, ROWS]
-            scale: 2,				                  // scale of the grid (nxn pixels per grid cell)
+            scale: 4,				                  // scale of the grid (nxn pixels per grid cell)
             statecolours: { 'alive': { 1: 'white' } },    // Only defining the "alive" state, while...
         }
 
@@ -43,11 +43,11 @@
 
         // Note to user: initialPattern is disabled, as it requirs a webserver for security reasons. You can also use the pattern button instead, or take a look at the draw_gol.html example where you can draw your own starting pattern.
         // sim.initialPattern(sim.prime, 'alive', '../patterns/elephant_cacatoo.png', 115, 115)
-        sim.prime.grid[150][150].alive=1
+        sim.prime.grid[50][50].alive=1
 
-        sim.prime.nextState = function (i, j)                         // Define the next-state function. This example is modulo prime
+        sim.prime.nextState = function (x, y)                         // Define the next-state function. This example is modulo prime
         {
-            this.grid[i][j].alive = (this.countMoore8(this, i, j, 'alive',1) % 2 == 0 ? 0 : 1)
+            this.grid[x][y].alive = (this.countMoore8(this, x, y, 'alive',1) % 2 == 0 ? 0 : 1)
         }
 
 
@@ -59,6 +59,7 @@
         sim.addPatternButton(sim.prime, 'alive')
         sim.addButton("pause/continue", function () { sim.toggle_play() })
         sim.addButton("step", function () { sim.step(); sim.display() })
+
         sim.start()
     }
 
